# Navier-Stokes_AGM

./: AGM.cpp  CMakeLists.txt  GeoInfo  InputFile  MakeGeoInfo.py  MakeGeoInfo_submodule.py
Header/: AGM.hpp  AXLGEN.hpp  AxialData.hpp  Basic++.hpp  CalcAtNeumannPt.hpp  CalcDiff.hpp  CalcRepresenSol.hpp  Class++.hpp  ControlData.hpp  Coordinate.hpp  Greenfunctions.hpp  Header.hpp  MatrixProcess.hpp  NavierStokesSolver.hpp  Point.hpp  Read.hpp  Solver.hpp  Stuff++.hpp  ftns.hpp  mkl_pardiso.h  util.hpp
